# update_updateservice

./: BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  updateengine.gni
client/: BUILD.gn  (+5 more)
frameworks/js/napi/client/: BUILD.gn  iupdate_session.h  local_updater.cpp  local_updater.h  restorer.cpp  restorer.h  update_client.cpp  update_client.h  update_module.cpp  update_session.cpp  update_session.h
interfaces/inner_api/engine/: BUILD.gn  update_service_kits_impl.cpp  update_service_ondemand.cpp  update_service_proxy.cpp
services/ab_update/: ab_update.gni
services/ab_update/include/: update_service_ab_callback.h  update_service_ab_callback_stub.h  update_service_ab_update.h
services/ab_update/src/: update_service_ab_callback.cpp  update_service_ab_callback_stub.cpp  update_service_ab_update.cpp
services/core/ability/sqlite/: sqlite.gni
services/engine/: BUILD.gn  engine_sa.gni
services/engine/etc/: dupdate_config.json  updater_sa.cfg  updater_sa.rc
services/engine/include/: progress_thread.h  update_no_constructor.h  update_notify.h  update_service.h  update_service_cache.h  update_service_impl_firmware.h  update_service_impl_manager.h  update_service_local_updater.h  update_service_proxy.h  update_service_restorer.h  update_service_stub.h  update_service_util.h
services/engine/sa_profile/: BUILD.gn  updater_sa.json
services/engine/src/: message_parcel_helper.cpp  progress_thread.cpp  update_helper.cpp  update_notify.cpp  update_service.cpp  update_service_cache.cpp  update_service_impl_firmware.cpp  update_service_impl_manager.cpp  update_service_local_updater.cpp  update_service_restorer.cpp  update_service_stub.cpp  update_service_util_hmos.cpp
services/firmware/: firmware.gni
services/firmware/callback/include/: firmware_callback_utils.h
services/firmware/callback/src/: firmware_callback_utils.cpp
services/firmware/check/include/: firmware_icheck.h
services/firmware/common/include/: firmware_common.h  firmware_constant.h  firmware_update_adapter.h  firmware_update_helper.h
services/firmware/common/src/: firmware_update_adapter.cpp  firmware_update_helper.cpp
services/firmware/data/db/include/: firmware_component.h  firmware_component_operator.h  firmware_component_table.h  firmware_database.h  firmware_database_callback.h  firmware_task.h  firmware_task_operator.h  firmware_task_table.h
services/firmware/data/db/src/: firmware_component_operator.cpp  firmware_component_operator_empty.cpp  firmware_component_table.cpp  firmware_component_table_empty.cpp  firmware_database.cpp  firmware_database_callback.cpp  firmware_database_empty.cpp  firmware_task_operator.cpp  firmware_task_operator_empty.cpp  firmware_task_table.cpp  firmware_task_table_empty.cpp
services/firmware/data/manager/include/: firmware_preferences_utils.h
services/firmware/data/manager/src/: firmware_preferences_utils.cpp
services/firmware/event/include/: firmware_event_listener.h
services/firmware/event/src/: firmware_event_listener.cpp
services/firmware/upgrade/data_processor/include/: firmware_check_data_processor.h  firmware_download_data_processor.h  firmware_install_data_processor.h
services/firmware/upgrade/data_processor/src/: firmware_check_data_processor.cpp  firmware_download_data_processor.cpp  firmware_install_data_processor.cpp
services/firmware/upgrade/executor/include/: firmware_apply_executor.h  firmware_check_executor.h  firmware_download_executor.h  firmware_iexecutor.h  firmware_install_executor.h
services/firmware/upgrade/executor/src/: firmware_apply_executor.cpp  firmware_check_executor.cpp  firmware_download_executor.cpp  firmware_install_executor.cpp
services/firmware/upgrade/flow/include/: firmware_flow_manager.h  firmware_manager.h
services/firmware/upgrade/flow/src/: firmware_flow_manager.cpp  firmware_manager.cpp
services/firmware/upgrade/install/include/: firmware_install.h  firmware_install_factory.h  firmware_sys_installer_callback.h  firmware_sys_installer_install.h  firmware_updater_install.h
services/firmware/upgrade/install/src/: firmware_install.cpp  firmware_install_factory.cpp  firmware_sys_installer_callback.cpp  firmware_sys_installer_install.cpp  firmware_updater_install.cpp
services/firmware/upgrade/mode/include/: firmware_download_mode.h  firmware_iexecute_mode.h  firmware_install_apply_mode.h  firmware_manual_check_mode.h
services/firmware/utils/include/: firmware_changelog_utils.h  firmware_check_analyze_utils.h  firmware_combine_version_utils.h  firmware_file_utils.h  firmware_log.h
services/firmware/utils/src/: firmware_changelog_utils.cpp  firmware_check_analyze_utils.cpp  firmware_combine_version_utils.cpp
services/startup/: startup.gni
services/startup/access/include/: access_factory.h  access_manager.h  default_access.h  firmware_access.h  i_access.h
services/startup/access/src/: access_factory.cpp  access_manager.cpp  default_access.cpp  firmware_access.cpp
services/startup/manage/include/: schedule_config.h  schedule_manager.h  startup_manager.h  startup_schedule.h
services/startup/manage/src/: schedule_config.cpp  schedule_manager.cpp  startup_manager.cpp  startup_schedule.cpp
services/startup/model/include/: schedule_task.h  startup_constant.h
test/fuzztest/UpdaterOnRemoteRequest_fuzzer/: BUILD.gn  UpdaterOnRemoteRequest_fuzzer.cpp  UpdaterOnRemoteRequest_fuzzer.h
test/fuzztest/updateservicegetupgradepolicy_fuzzer/: BUILD.gn  updateservicegetupgradepolicy_fuzzer.cpp  updateservicegetupgradepolicy_fuzzer.h
test/fuzztest/updateserviceregisterupdatecallback_fuzzer/: BUILD.gn  updateserviceregisterupdatecallback_fuzzer.cpp  updateserviceregisterupdatecallback_fuzzer.h
test/fuzztest/updateserviceunregisterupdatecallback_fuzzer/: BUILD.gn  updateserviceunregisterupdatecallback_fuzzer.cpp  updateserviceunregisterupdatecallback_fuzzer.h
test/unittest/: BUILD.gn  update_server_ut_entry.cpp
test/unittest/update_client/: client_stub.cpp  client_stub.h  client_unittest.cpp
test/unittest/update_engine/: server_unittest.cpp
(+181 files in other folders)
