# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ohos_kits.gni")
import("//build/ohos/ohos_part.gni")
import("//build/ohos/ohos_test.gni")

ohos_part("update_service") {
  subsystem_name = "updater"
  module_list = [
    "//base/update/updateservice/frameworks/js/napi/client:update",
    "//base/update/updateservice/services/engine:updateservice",
    "//base/update/updateservice/services/engine:updater_sa.rc",
    "//base/update/updateservice/services/engine/sa_profile:updater_sa_profile",
    "//base/update/updateservice/interfaces/inner_api/engine:updateservicekits",
  ]
  origin_name = "update_service"
  variant = "phone"
}

ohos_inner_kits("update_service_inner_kits") {
  sdk_libs = [
    {
      type = "so"
      name = "//base/update/updateservice/interfaces/inner_api/engine:updateservicekits"
      header = {
        header_files = [
          "iupdate_callback.h",
          "iupdate_service.h",
          "update_helper.h",
          "update_service_kits_impl.h",
          "update_service_kits.h",
        ]
        header_base = "//base/update/updateservice/interfaces/inner_api/include"
      }
    },
  ]
  part_name = "update_service"
  origin_name = "update_service"
  variant = "phone"
}

ohos_part_test("update_service_test") {
  testonly = true
  test_packages = [
    "//base/update/updateservice/test/fuzztest/updateservicecancel_fuzzer:UpdateServiceCancelFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicechecknewversion_fuzzer:UpdateServiceCheckNewVersionFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicedownload_fuzzer:UpdateServiceDownloadFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicegetnewversion_fuzzer:UpdateServiceGetNewVersionFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicegetupgradepolicy_fuzzer:UpdateServiceGetUpgradePolicyFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicegetupgradestatus_fuzzer:UpdateServiceGetUpgradeStatusFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateserviceregisterupdatecallback_fuzzer:UpdateServiceRegisterUpdateCallbackFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateservicesetupgradepolicy_fuzzer:UpdateServiceSetUpgradePolicyFuzzTest",
    "//base/update/updateservice/test/fuzztest/updateserviceunregisterupdatecallback_fuzzer:UpdateServiceUnregisterUpdateCallbackFuzzTest",
  ]
  deps = [ ":update_service" ]
  part_name = "update_service"
  subsystem_name = "updater"
}

group("unittest") {
  testonly = true
  deps = [ "test/unittest:updateservice_unittest" ]
}

group("update_client_jsapi") {
  if (support_jsapi) {
    deps = [ "//base/update/updateservice/frameworks/js/napi/client/:update" ]
  }
}
