# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

updateengine_client_library_name = "update"
updateengine_inner_kits = "update_service_inner_kits"
updateengine_inner_library_name = "updateservicekits"
updateengine_library_name = "updateservice"
updateengine_part_name = "update_service"
updateengine_root_path = "//base/update/updateservice"
updateengine_test_name = "update_service_test"
updateengine_unittest_name = "update_service_unittest"
