# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updateservice/updateengine.gni")

startup_root_path = "$updateengine_root_path/services/startup"

startup_internal_deps = []
startup_external_deps = []
startup_deps = []
startup_public_deps = []
startup_include = [
    "$startup_root_path/access/include",
    "$startup_root_path/manage/include",
    "$startup_root_path/model/include",
]
startup_src = [
    "$startup_root_path/access/src/access_factory.cpp",
    "$startup_root_path/access/src/access_manager.cpp",
    "$startup_root_path/access/src/default_access.cpp",
    "$startup_root_path/access/src/firmware_access.cpp",
    "$startup_root_path/manage/src/schedule_config.cpp",
    "$startup_root_path/manage/src/schedule_manager.cpp",
    "$startup_root_path/manage/src/startup_manager.cpp",
    "$startup_root_path/manage/src/startup_schedule.cpp",
]